# jobhunt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/dev_log/20260429/: status.md
docs/dev_log/20260429/sprints/: sprint-01-jobhunt-mvp.md
docs/dev_log/20260429/sprints/done/: sub-sprint-01-scaffold-and-ci.md  sub-sprint-02-models-and-db.md  sub-sprint-03-sources.md  sub-sprint-04-llm-providers.md  sub-sprint-05-filter-pipeline.md  sub-sprint-06-delivery-and-services.md  sub-sprint-07-cli-and-e2e.md
jobhunt/: __init__.py  browser.py  cli.py  config.py  db.py  diagnostics.py  exceptions.py  filters.py  models.py  ranker.py  sender.py  tailor.py  wiring.py
jobhunt/cv/: __init__.py  profile_seeder.py  reader.py
jobhunt/llm/: __init__.py  _parsing.py  anthropic_provider.py  base.py  openai_provider.py
jobhunt/prompts/: profile.py  rank.py  tailor.py
jobhunt/repositories/: __init__.py  application_repository.py  job_repository.py
jobhunt/services/: __init__.py  apply_service.py  fetch_service.py  review_service.py
jobhunt/sources/: __init__.py  _http.py  adzuna.py  arbeitnow.py  base.py  bundesagentur.py  jooble.py  remotive.py  weworkremotely.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: adzuna_sample.json  arbeitnow_sample.json  bundesagentur_sample.json  jooble_sample.json  remotive_sample.json  weworkremotely_sample.xml
tests/integration/: test_db_schema.py  test_end_to_end.py  test_wiring.py
tests/unit/: _fakes.py  test_browser.py  test_cli_send_test.py  test_diagnostics.py  test_filters.py  test_models.py  test_ranker.py  test_sender.py  test_tailor.py
tests/unit/cv/: test_profile_seeder.py  test_reader.py
tests/unit/llm/: _fakes.py  test_anthropic_provider.py  test_openai_provider.py  test_parsing.py  test_provider_contract.py
tests/unit/services/: test_apply_service.py  test_fetch_service.py  test_review_service.py
tests/unit/sources/: _helpers.py  test_adzuna.py  test_arbeitnow.py  test_bundesagentur.py  test_http.py  test_jooble.py  test_remotive.py  test_source_contract.py  test_weworkremotely.py
