[project]
name = "jobhunt"
version = "0.1.0"
description = "Personal interactive CLI that fetches, ranks, tailors, and sends job applications."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jobhunt contributors" }]
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.13.0",
    "pdfplumber>=0.11.0",
    "rich>=13.9.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "aiosmtpd>=1.4.6",
    "fpdf2>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jobhunt"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
    "PL",
    "C4",
    "TID",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "PLR0911",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR", "B011", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["jobhunt", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_any_unimported = false
plugins = ["pydantic.mypy"]
exclude = ["docs/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*", "fpdf.*", "aiosmtpd.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiosmtpd.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source = ["jobhunt"]
omit = [
    "jobhunt/cli.py",
    "jobhunt/wiring.py",
    "jobhunt/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
